# RenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  main.cpp
resource/: test.json
resource/json/: test.json  test2.json  test3.json
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  CameraBase.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/dataloader/: CMakeLists.txt  DatasetBase.h  jsonParser.cpp
src/dataset/: CMakeLists.txt  DataSet.cpp  DataSet.h  DatasetBase.h
src/examples/: CMakeLists.txt
src/imgui/: CMakeLists.txt  Gui.cpp  Gui.h  test.cpp
src/rasterizer/: CMakeLists.txt  OpenglRender.cpp  OpenglRender.h  RenderBase.h  VulkanRender.cpp  VulkanRender.h  vulkan_example.cpp
src/shaders/OpenGL/: OpenGLUvDebbugShader.frag  OpenGLUvDebbugShader.vert  OpenGLVertexShader.vert
src/utils/: CMakeLists.txt  CameraUtils.cpp  CameraUtils.h  FileUtils.cpp  FileUtils.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParseStruct.h  Parser.cpp  Parser.h  debugFuncs.hpp
