cmake_minimum_required(VERSION 3.21)
PROJECT(RenderEngine)
SET(CMAKE_CXX_STANDARD 17)


# load third party library
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/3rdparty)

find_package(GLEW)

find_package(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})


ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE argparse)